// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorScreen with errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 120,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Jost-Book",
          "fontSize": 26,
          "lineHeight": 32,
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Jost-Medium",
          "fontSize": 22,
          "lineHeight": 28,
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        Object {
          "backgroundColor": "rgba(238, 238, 238, 0.75)",
          "borderRadius": 25,
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 22,
          "padding": 15,
        }
      }
    >
      Déjà vu
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1AB775",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 120,
              "opacity": undefined,
              "paddingHorizontal": 24,
              "paddingVertical": 5,
            }
          }
          testID="ErrorContinueButton"
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            restartApp
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ErrorScreen without errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 120,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Jost-Book",
          "fontSize": 26,
          "lineHeight": 32,
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Jost-Medium",
          "fontSize": 22,
          "lineHeight": 28,
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        Object {
          "backgroundColor": "rgba(238, 238, 238, 0.75)",
          "borderRadius": 25,
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 22,
          "padding": 15,
        }
      }
    >
      unknown
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1AB775",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 120,
              "opacity": undefined,
              "paddingHorizontal": 24,
              "paddingVertical": 5,
            }
          }
          testID="ErrorContinueButton"
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            restartApp
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
